# ChangeLog for app-portage/g-ctan
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-portage/g-ctan/ChangeLog,v 1.14 2010/10/25 14:38:11 fauli Exp $

  25 Oct 2010; Christian Faulhammer <fauli@gentoo.org>
  -g-ctan-2009.1.ebuild:
  clean up

*g-ctan-2009.2 (23 Jun 2010)

  23 Jun 2010; Christian Faulhammer <fauli@gentoo.org>
  +g-ctan-2009.2.ebuild:
  version bump, fixes bug 315171

*g-ctan-2009.1 (21 Jan 2010)

  21 Jan 2010; Christian Faulhammer <fauli@gentoo.org>
  +g-ctan-2009.1.ebuild:
  version bump for TeXLive 2009

  14 Jan 2010; Christian Faulhammer <fauli@gentoo.org>
  -files/g-ctan-2008.1-fix-overlay-detection.patch:
  clean up stray patch

*g-ctan-2008.2 (11 Jan 2010)

  11 Jan 2010; Christian Faulhammer <fauli@gentoo.org>
  -g-ctan-2008.1-r1.ebuild, +g-ctan-2008.2.ebuild:
  version bump because of upstream changes

  19 Nov 2009; Christian Faulhammer <fauli@gentoo.org>
  g-ctan-2008.1-r1.ebuild:
  added ~amd64 for bug 286060

*g-ctan-2008.1-r1 (23 Sep 2009)

  23 Sep 2009; Christian Faulhammer <fauli@gentoo.org>
  -g-ctan-2008.1.ebuild, +g-ctan-2008.1-r1.ebuild,
  +files/g-ctan-2008.1-fix-overlay-detection.patch:
  revision bump to fix Launchpad bug 434385

  21 Sep 2009; Christian Faulhammer <fauli@gentoo.org> -g-ctan-9999.ebuild:
  clean up

*g-ctan-2008.1 (21 Sep 2009)

  21 Sep 2009; Christian Faulhammer <fauli@gentoo.org>
  +g-ctan-2008.1.ebuild:
  first released version

  08 Sep 2009; Christian Faulhammer <fauli@gentoo.org> g-ctan-9999.ebuild:
  depend on TeXLive 2008

  08 Sep 2009; Christian Faulhammer <fauli@gentoo.org> g-ctan-9999.ebuild:
  allow xz-utils along lzma-utils

  08 Sep 2009; Christian Faulhammer <fauli@gentoo.org> g-ctan-9999.ebuild:
  make the emake call die

  07 Sep 2009; Christian Faulhammer <fauli@gentoo.org> g-ctan-9999.ebuild:
  use Makefile from upstream now

*g-ctan-9999 (02 Sep 2009)

  02 Sep 2009; Christian Faulhammer <fauli@gentoo.org> +g-ctan-9999.ebuild,