@@ -1,6 +1,13 @@
 # ChangeLog for app-portage/g-ctan
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-portage/g-ctan/ChangeLog,v 1.14 2010/10/25 14:38:11 fauli Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-portage/g-ctan/ChangeLog,v 1.15 2010/10/25 14:44:12 fauli Exp $
+
+*g-ctan-2009.2-r1 (25 Oct 2010)
+
+  25 Oct 2010; Christian Faulhammer <fauli@gentoo.org>
+  +g-ctan-2009.2-r1.ebuild:
+  TeXLive upstream changed repository URL because of Release of TeXLive
+  2010, fix it by providing the archive location
 
   25 Oct 2010; Christian Faulhammer <fauli@gentoo.org>
   -g-ctan-2009.1.ebuild:
